--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,18 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 a {
@@ -92,14 +102,16 @@ hr.RampBreak--l {
 
 .RampInputSelect--dropdown-container {
   display: none;
-  position: fixed;
+  position: absolute; /* Now the dropdown should move with its parent input when the page is scrolled */
   width: 100%;
   max-width: 700px;
   border: 1px solid var(--color-darker-shade);
   margin-top: 0.5rem;
   max-height: 16rem;
   overflow: auto;
-  box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 13%) 0px 4px 8px;
+  box-shadow:
+    rgb(0 0 0 / 10%) 0px 0px 1px,
+    rgb(0 0 0 / 13%) 0px 4px 8px;
 }
 
 .RampInputSelect--dropdown-container-opened {
